test/cli/test-validating-policy/pss-disallow-proc-mount/policy.yaml
apiVersion: policies.kyverno.io/v1beta1
kind: ValidatingPolicy
metadata:
  name: disallow-proc-mount
spec:
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE", "UPDATE"]
      resources:   ["pods"]
  validations:
    - expression: >-
        object.spec.?hostUsers.orValue(true) == false ||
        (!has(object.spec.containers) || object.spec.containers.all(c,
          !has(c.securityContext) ||
          !has(c.securityContext.procMount) ||
          c.securityContext.procMount == 'Default')) &&
        (!has(object.spec.initContainers) || object.spec.initContainers.all(c,
          !has(c.securityContext) ||
          !has(c.securityContext.procMount) ||
          c.securityContext.procMount == 'Default')) &&
        (!has(object.spec.ephemeralContainers) || object.spec.ephemeralContainers.all(c,
          !has(c.securityContext) ||
          !has(c.securityContext.procMount) ||
          c.securityContext.procMount == 'Default'))
      message: >-
        The default /proc masks are set up to reduce attack surface. The fields
        spec.containers[*].securityContext.procMount,
        spec.initContainers[*].securityContext.procMount, and
        spec.ephemeralContainers[*].securityContext.procMount must be unset or set to `Default`,
        unless the Pod sets spec.hostUsers to `false`.
